# filewall

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  e2e.sh  example_config.toml
.claude/rules/: rust-fanotify.md  rust-iced.md  rust-libc.md  rust-unix-socket.md  xdg-portal-color-scheme.md  yad-ui.md
docs/: fanotify-notes.md  project-status.md  sudo-in-claude-session.md
docs/superpowers/plans/: 2026-06-13-learned-rules-persistence-filewallctl.md  2026-06-14-config-hotreload.md  2026-06-15-directory-marks-fan-event-on-child.md  2026-06-15-prompt-scope-transparency.md  2026-06-22-filewallctl-dump-and-formats.md
docs/superpowers/specs/: 2026-06-13-learned-rules-persistence-filewallctl-design.md  2026-06-14-config-hotreload-design.md  2026-06-14-watch-individual-files-design.md  2026-06-15-prompt-scope-transparency-design.md  2026-06-22-stable-rule-ids-design.md
filewall-proto/: Cargo.toml
filewall-proto/src/: lib.rs
filewall-rules/: Cargo.toml
filewall-rules/src/: lib.rs
filewall-ui/: Cargo.toml
filewall-ui-iced/: Cargo.toml
filewall-ui-iced/src/: main.rs  model.rs  theme.rs  worker.rs
filewall-ui/src/: main.rs
filewallctl/: Cargo.toml
filewallctl/src/: format.rs  main.rs  render.rs
filewalld/: Cargo.toml
filewalld/src/: config.rs  control.rs  fanotify.rs  main.rs  markset.rs  policy.rs  server.rs  treewatch.rs  watcher.rs
packaging/: PKGBUILD  config.toml  filewall.install
packaging/systemd/: filewall-ui-iced.service  filewall-ui.service  filewalld.service
phase0/: verify-dump.sh
