[workspace]
resolver = "2"
members = [
  "filewall-proto",
  "filewall-rules",
  "filewalld",
  "filewall-ui",
  "filewall-ui-iced",
  "filewallctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Paul Rogalinski-Pinter"]

[workspace.dependencies]
filewall-proto = { path = "filewall-proto" }
filewall-rules = { path = "filewall-rules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
nix = { version = "0.29", features = ["fs", "signal", "inotify"] }
libc = "0.2"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
strip = true
