[package]
name = "filewalld"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "filewalld"
path = "src/main.rs"

[dependencies]
filewall-proto.workspace = true
filewall-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true
nix.workspace = true
libc.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
